add about page and installing the asset component

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -2,6 +2,6 @@
 <p>Today is May 4, 2021 and there is 241 days left until next year.</p>
 
 <footer>
-	<p>&copy; Copyright 2021 &middot; <a href="#">About us</a></p>
+	<p>&copy; Copyright 2021 &middot; <a href="{{ path('app_about') }}">About us</a></p>
 	
 </footer>
