make use of layout avoid deplication of footer

--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -21,7 +21,7 @@
 
         <footer>
             <p>
-                &copy; Copyright {{ 'now'|date('Y', 'Africa/dakar')}} &middot;
+                &copy; Copyright 2021 &middot;
 
                 {% if app.request.attributes.get('_route') != 'app_about' %}
                  <a href="{{ path('app_about') }}">About us</a></p>
