--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,7 +1,10 @@
-<h1>Oups, not a new year :(</h1>
-<p>Today is May 4, 2021 and there is 241 days left until next year.</p>
+{% extends 'layouts/base.html.twig' %}
 
-<footer>
-	<p>&copy; Copyright 2021 &middot; <a href="{{ path('app_about') }}">About us</a></p>
+{% block body %}
+
+	<h1>Oups, not a new year :(</h1>
+	<p>Today is May 4, 2021 and there is 241 days left until next year.</p>
+
 	
-</footer>
+
+{% endblock %}
